# chantiko

./: .env.local.example  .gitignore  PRD.md  README.md  mcp_config.json  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  proxy.ts  pyproject.toml  requirements.txt  vercel.json  vitest.setup.ts
.claude/: settings.json  settings.local.json
.claude/hooks/: pre-commit-test.sh
.claude/rules/: git-workflow.md  planning.md  vercel-deployment.md  vercel-python.md
__tests__/hooks/: useAIChat.test.ts
__tests__/store/: aiStore.test.ts  settingsStore.test.ts
api/: main.py
api/_lib/: ai_service.py  auth.py  db.py  logging.py  main.py  mcp_server.py  models.py  schemas.py
api/activities/: [id].py  history.py  index.py
api/ai/: activity_edit.py  goal_edit.py  index.py
api/goals/: [id].py  index.py
api/layers/: [id].py  index.py
api/settings/: index.py
api/tasks/: [id].py  index.py
api/tests/: conftest.py  test_ai_endpoints.py  test_ai_service.py
app/: error.tsx  globals.css  layout.tsx
app/activity/: page.tsx
app/g/: page.tsx
app/goals/: page.tsx
app/profile/: page.tsx
app/progress/: page.tsx
app/tasks/: page.tsx
components/activity/: activity-card.tsx  (+3 more)
hooks/: useAIChat.ts  useAIChatHandlers.ts  useAIEdit.ts  useActivities.ts  useAllTasks.ts  useAuth.ts  useGoals.ts  useKeyboardHeight.ts  useLayers.ts  useSwipeDismiss.ts  useTasks.ts
lib/: api.ts  features.ts  rrule-utils.ts  utils.ts
store/: activityStore.ts  aiStore.ts  allTaskStore.ts  goalStore.ts  layerStore.ts  settingsStore.ts  taskStore.ts
types/: index.ts
(+49 files in other folders)
